# artbox

./: .gitignore  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  404.html  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  index.html  index.md  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: main.yaml  release.yaml
api/references/: index.html  references.md
changelog/: changelog.md  index.html
conda/: dev.yaml
contributing/: contributing.md  index.html
docs/: changelog.md  contributing.md  example.ipynb  index.md  installation.md  mkdocs.yaml
docs/api/: references.rst
installation/: index.html  installation.md
search/: search_index.json
src/artbox/: __init__.py  __main__.py  audio.py  base.py  cli.py  constants.py  sounds.py  speech.py  video.py  videos.py  voices.py
tests/: __init__.py  test_audios.py  test_sounds.py  test_speech.py  test_videos.py  test_voices.py
tests/data/notes/: set1.txt
