[tool.poetry]
name = "artbox"
version = "0.4.0"  # semantic-release
description = "GGPEDIA Youtube aims to create youtube videos with AI"
authors = ["Ivan Ogasawara <ivan.ogasawara@gmail.com>"]
packages = [
  {include = "artbox", from="src"},
]
license = "Other"
exclude = [
  ".git/*",
  ".env*",
]

[tool.poetry.scripts]
"artbox" = "artbox.__main__:app"


[tool.poetry.dependencies]
python = "^3.8.1"
pytube = "^15.0.0"
pycairo = "^1.24.0"
pygobject = "^3.44.1"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
moviepy = "^1.0.3"
pydub = "^0.25.1"
noisereduce = "^2.0.1"
aubio = "^0.4.9"
gtts = "^2.3.2"
edge-tts = "^6.1.8"

[tool.poetry.group.dev.dependencies]
urllib3 = "<2"  # fix poetry issues
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
coverage = "^7.2.7"
black = "^23.3.0"
pre-commit = "^3.3.2"
ruff = "^0.0.278"
mypy = "^1.3.0"
bandit = "^1.7.5"
vulture = "^2.7"
mccabe = "^0.6.1"
ipython = "<8"
ipykernel = ">=6.0.0"
Jinja2 = "^3.1.2"
mkdocs = "^1.4.3"
mkdocs-exclude = "^1.0.2"
mkdocs-jupyter = "^0.24.1"
mkdocs-literate-nav = "^0.6.0"
mkdocs-macros-plugin = ">=0.7.0,<1"
mkdocs-material = "^9.1.15"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^1.1.2"
makim = "1.8.3"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.black]
line-length = 79
target-version = ["py38"]
force-exclude = '''(?x)(
    docs/*
  | .*\\.egg-info
)'''  # TOML's single-quoted strings do not require escaping backslashes

[tool.bandit]
exclude_dirs = ["tests"]
targets = "src/artbox"

[tool.vulture]
exclude = ["tests"]
ignore_decorators = []
ignore_names = []
make_whitelist = true
min_confidence = 80
paths = ["src/artbox"]
sort_by_size = true
verbose = false

[tool.ruff]
line-length = 79
force-exclude = true
src = ["src/artbox"]
exclude = [
  'docs',
]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "D",   # pydocstyle
  "YTT", # flake8-2020
  "RUF", # Ruff-specific rules
  "I001",  # isort
]
fixable = ["I001"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.isort]
# Use a single line between direct and from import
lines-between-types = 1

[tool.mypy]
no_strict_optional = false

[[tool.mypy.overrides]]
module = [
  "pytube",
]
ignore_missing_imports = true
