[tool.poetry]
name = "artbox"
version = "0.5.3"  # semantic-release
description = "ArtBox is a tool set for handling multimedia files."
readme = "docs/index.md"
authors = ["Ivan Ogasawara <ivan.ogasawara@gmail.com>"]
packages = [
  {include = "artbox", from="src"},
]
license = "Other"
exclude = [
  ".git/*",
  ".env*",
]

[tool.poetry.scripts]
"artbox" = "artbox.__main__:app"


[tool.poetry.dependencies]
python = ">3.8.1,<3.12"
pytube = ">=15.0.0"
pycairo = ">=1.24.0"
pygobject = ">=3.44.1"
openai = ">=1"
python-dotenv = ">=1.0.0"
moviepy = ">=1.0.3"
pydub = ">=0.25.1"
noisereduce = ">=2.0.1,<3"
aubio = ">=0.4.9"
gtts = ">=2.3.2"
edge-tts = ">=6.1.8"
numpy = ">=1.20"
typer = ">=0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.2"
pytest-cov = ">=4.1.0"
coverage = ">=7.2.7"
pre-commit = ">=3.3.2"
ruff = ">=0.1.5"
mypy = ">=1.6.0"
bandit = ">=1.7.5"
vulture = ">=2.9.1"
mccabe = ">=0.6.1"
ipykernel = ">=6.0.0"
ipython = ">=7.0.0"
mkdocs = ">=1.4.3"
mkdocs-exclude = ">=1.0.2"
mkdocs-jupyter = ">=0.24.1"
mkdocs-literate-nav = ">=0.6.0"
mkdocs-macros-plugin = ">=0.7.0,<1"
mkdocs-material = ">=9.1.15"
mkdocstrings = ">=0.21.2"
mkdocstrings-python = ">=1.1.2"
jupyterlab = ">=4.0.5"
makim = "1.12.0"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.vulture]
exclude = ["tests"]
ignore_decorators = []
ignore_names = []
make_whitelist = true
min_confidence = 80
paths = ["src/artbox"]
sort_by_size = true
verbose = false

[tool.ruff]
line-length = 79
force-exclude = true
src = ["./"]
ignore = ["PLR0913"]
exclude = [
  'docs',
]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "D",   # pydocstyle
  "YTT", # flake8-2020
  "PL",  # PL
  "RUF", # Ruff-specific rules
  "I001", # isort
]
fix = true

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.isort]
# Use a single line between direct and from import
lines-between-types = 1

[tool.ruff.format]
quote-style = "double"


[tool.mypy]
no_strict_optional = false

[[tool.mypy.overrides]]
module = [
  "aubio",
  "edge_tts",
  "gtts",
  "moviepy.editor",
  "noisereduce",
  "pydub",
  "pydub.generators",
  "pytube",
]
ignore_missing_imports = true
